[gd_scene load_steps=6 format=3 uid="uid://b2p62dsw7bpx1"]

[ext_resource type="StyleBox" path="res://interface/themes/olympic/normal.tres" id="1"]
[ext_resource type="Script" uid="uid://3lkj8qmvriwk" path="res://ui/option_scenes/settings/remapping/elements/RemapAction.gd" id="2"]
[ext_resource type="FontFile" path="res://assets/theme/DefaultOptionFont.tres" id="3"]
[ext_resource type="PackedScene" uid="uid://b2srnrmb8qml8" path="res://ui/option_scenes/settings/remapping/elements/AutoHScrollContainer.tscn" id="5"]
[ext_resource type="PackedScene" uid="uid://ds3joydebsl3q" path="res://ui/option_scenes/settings/remapping/elements/keyboard/ButtonRepresentation.tscn" id="6"]

[node name="RemapAction" type="MarginContainer" groups=["remapping_actions"]]
offset_right = 70.0
offset_bottom = 31.0
focus_mode = 2
script = ExtResource("2")
action = "up"
device = "kb1"
button_scene = ExtResource("6")

[node name="Panel" type="Panel" parent="."]
offset_right = 328.0
offset_bottom = 50.0
theme_override_styles/panel = ExtResource("1")

[node name="Container" type="HBoxContainer" parent="."]
offset_right = 328.0
offset_bottom = 50.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Padding2" type="Label" parent="Container"]
offset_top = 9.0
offset_right = 10.0
offset_bottom = 40.0
custom_minimum_size = Vector2(10, 0)
theme_override_fonts/font = ExtResource("3")
uppercase = true

[node name="Description" type="Label" parent="Container"]
offset_left = 14.0
offset_top = 9.0
offset_right = 14.0
offset_bottom = 40.0
theme_override_fonts/font = ExtResource("3")

[node name="Padding3" type="Label" parent="Container"]
offset_left = 18.0
offset_top = 9.0
offset_right = 18.0
offset_bottom = 40.0
size_flags_horizontal = 11
theme_override_fonts/font = ExtResource("3")
uppercase = true

[node name="ScrollContainer" parent="Container" instance=ExtResource("5")]
offset_left = 22.0
offset_right = 322.0
offset_bottom = 50.0
size_flags_vertical = 3

[node name="Padding4" type="Label" parent="Container"]
offset_left = 326.0
offset_top = 9.0
offset_right = 328.0
offset_bottom = 40.0
custom_minimum_size = Vector2(2, 0)
size_flags_horizontal = 9
theme_override_fonts/font = ExtResource("3")
uppercase = true

[connection signal="focus_entered" from="." to="." method="_on_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_focus_exited"]
